--- a/ilegales.html
+++ b/ilegales.html
@@ -1,8 +1,7 @@
-<html lang="en">
+<html lang="es-la">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="autor" content="Autos Electricos. descripcion y modelos de autos segun su marca.">
+  
     <title>Autos Eléctricos</title>
 </head>
 <main>
