avance de estructura de Pagina_Ejemplo.html/agrega imagen deportivo.ico

--- a/ilegales.html
+++ b/ilegales.html
@@ -1,6 +1,8 @@
 <html lang="es-la">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="deportivo.ico">
+
   
     <title>Autos Eléctricos</title>
 </head>
@@ -19,7 +21,7 @@
         <h1>Los Ilegales</h1>
             <h2>Cancion: "Se siente Bien"</h2>
                 <h3>Año:2012</h3>
-        <center><video width="727" height="409" src="Ilegales - Chucucha - Official Video_HD.mp4" controls></video></center>
+        <video width="727" height="409" src="Ilegales - Chucucha - Official Video_HD.mp4" controls></video>
     </div>
         
 
