--- a/tesla.html
+++ b/tesla.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="autor" content="Autos Electricos. descripcion y modelos de autos segun su marca.">
+    <link rel="icon" href="deportivo.ico">
+
     <title>Autos Eléctricos</title>
 </head>
 <main>
