--- a/Pagina_Ejemplo.html
+++ b/Pagina_Ejemplo.html
@@ -65,31 +65,32 @@
     <div>
       <h4>Envianos tu correo electrónico y si te gustó el tema</h4>
       <form action="/enviar-respuesta">
-        <label for="me encanto"><input id="me encanto" type="radio" name="me encanto-me gusto-no me gusto">Me Encantó</label><br>
+        <label for="me encanto"><input id="me encanto" type="radio" value="me encanto" name="me encanto-me gusto-no me gusto">Me Encantó</label><br>
 
-        <label for="me gusto"><input id="me gusto" type="radio" name="me encanto-me gusto-no me gusto">Me Gustó</label><br>
+        <label for="me gusto"><input id="me gusto" type="radio" value="me gusto" name="me encanto-me gusto-no me gusto">Me Gustó</label><br>
 
-        <label for="no me gusto"><input id="no me gusto" type="radio" name="me encanto-me gusto-no me gusto">No Me Gustó</label><br>
+        <label for="no me gusto"><input id="no me gusto" type="radio" value="no me gusto" name="me encanto-me gusto-no me gusto">No Me Gustó</label><br>
         
           <h5>¿Quieres recibir temas como este la proxima vez?</h5>
-            <label for="si"><input id="si" type="checkbox" name="si-no">Si</label>
-            <label for="no"><input id="no" type="checkbox" name="si-no">No</label><br>
+          <!--el atributo "value" es el valor que se le informa al servidor para destacar la opcion elegida-->
+            <label for="si"><input id="si" type="checkbox" value="si" name="si-no">Si</label>
+            <label for="no"><input id="no" type="checkbox" value="no" name="si-no">No</label><br>
 
         <input type="email"  placeholder="Correo Electrónico" required><br>
 
         <button type="submit">Enviar</button>
       </form>
     </div>
-        <footer>
-            <h4>COPYRIGTH. Todos los derechos reservados</h4>
-                <p>Siguenos en todas nuestra redes sociales</p>
+        
+
+</body>
+</main>
+    <footer>
+            <p><small>COPYRIGTH. Todos los derechos reservados <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Alemar16</a></p></small>
+                <p><small>Siguenos en todas nuestra redes sociales</p></small>
                     <a href="https://es-la.facebook.com/">facebook</a>
                     <a href="https://www.instagram.com/">Instagram</a>
                     <a href="https://www.youtube.com/">Youtube</a>
                     <a href="https://twitter.com/">Twitter</a>
-
-        </footer>        
-
-</body>
-</main>
+    </footer>        
 </html>
