practica de CSS/cambio de color de fuente h3 archivo Pagina_Ejemplo.html

--- a/Pagina_Ejemplo.html
+++ b/Pagina_Ejemplo.html
@@ -6,6 +6,7 @@
     <meta name="autor" content="Autos Electricos. descripcion y modelos de autos segun su marca.">
     <link rel="icon" href="imagenes/deportivo.ico">
     <title>Autos Eléctricos</title>
+    <link href="style.css" rel="stylesheet">
  </head>
 
  <body>
